# potatobot

./: .env.template  .gitignore  Cargo.toml  Cross.toml  Dockerfile  README.md
.cargo/: config.toml
src/: commands.rs  error.rs  image_detection.rs  main.rs
