[package]
name = "potatobot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = {git = "https://github.com/kangalioo/poise.git"}
tokio = {version = "1.12.0", features = ["rt-multi-thread"]}
regex = "1.5.4"
dotenv = "0.15.0"
log = "0.4.14"
pretty_env_logger = "0.4.0"
lazy_static = "1.4.0"