[package]
name = "potatobot"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = {version = "0.6.1", features = ["collector"]}
tokio = {version = "1.37.0", features = ["rt-multi-thread"]}
regex = "1.5.4"
dotenv = "0.15.0"
log = "0.4.14"
pretty_env_logger = "0.4.0"
lazy_static = "1.4.0"
levenshtein = "1.0.5"
futures = "0.3"
nsfw = {git = "https://github.com/Fyko/nsfw"}
anyhow = "1"