[package]
name = "potatobot"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1

[dependencies]
poise = {version = "0.6.1", features = ["collector"]}
serenity = {version = "0.12", features = ["cache"]}
tokio = {version = "1.37.0", features = ["rt-multi-thread"]}
regex = "1.5.4"
dotenv = "0.15.0"
log = "0.4.14"
pretty_env_logger = "0.4.0"
lazy_static = "1.4.0"
levenshtein = "1.0.5"
futures = "0.3"
nsfw = {git = "https://github.com/Fyko/nsfw", features = ["jpeg", "gif"]}
image = { version = "0.24.7", features = ["jpeg", "webp", "png", "gif"] }
anyhow = "1"
reqwest = {version = "0.12", default-features = false, features = ["rustls-tls"]}
bytes = {version = "1", features = ["std"]}
rayon = "1"
ffmpeg-next = {version = "7.0.0"}
env-libvpx-sys = {version = "5.1.3", features = ["generate"]}
chrono = "0.4.37"

[patch.crates-io]
serenity = {git = "https://github.com/serenity-rs/serenity.git"}
